--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -147,12 +147,13 @@ Last, the sampling rate will be changed to 100 Hz, and EMG data will be averaged
 ## 2.4 Sampling plan
 
 Sample size calculation is done using *G\*Power* [@Faul2007; @Faul2009].
-In a meta-analysis of Zaehringer and colleagues [-@Zaehringer2020], effect sizes of ER on peripheral-physiological measures were reported.
-To find an effect of $d=-0.32$ of ER on *corrugator* muscle activity with $\alpha=.05$ and $\beta=.95$, data of least $N=85$ have to be analyzed.
+In a meta-analysis of Zaehringer and colleagues [-@Zaehringer2020], effect sizes of ER on peripheral-physiological measures were reported:
+To find an effect of $d=-0.32$ of ER on *corrugator* muscle activity with $\alpha=.05$ and $\beta=.95$, data of at least $N=85$ have to be analyzed.
 Power analyses of all other hypotheses yielded smaller sample sizes.
 However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
 Therefore, we aim to collect data of 90 participants.
-Detailed information on power calculation for each hypothesis can be found in the [design table](#DesignTable).
+Detailed information on power calculation for each hypothesis can be found in the [design table](#DesignTable) in the Supplement.
+<!-- hier würde ich den Verweis zur Design Table ganz explizit machen, also sagen, wo diese zu finden ist. -->
 
 ## 2.5 Analysis plan
 
