--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -32,10 +32,9 @@ Moreover, it is known that ER strategies reduce physiological responses of emoti
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 So these tactics from three different strategies proved to be effective in the short term. 
 However, in order to be able to make a statement on their general benefit, longer-term consequences must also be considered. 
-In particluar, strategies that do not put the emotional content of the situation into a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
+In particular, strategies that do not put the emotional content of the situation into a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
 <!-- Wortwiederholung --> 
 Long-term consequences of self-reported habitual use of ER strategies for affect and well-being have been discussed [@GrossJohn2003]. 
-<!-- würde einheitlich "ER" (wenn vorher eingeführt, wurde hier aber gemacht) oder "emotion regulation" schreiben. --> 
 Especially suppression is generally associated with poorer outcomes (i.e., more negative affect, lower general well-being), which led to the postulation of *adaptive* and *maladaptive* ER strategies.
 For example, it was shown that maladaptive ER strategies mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
 In addition, a number of ER strategies have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]). 
@@ -44,7 +43,6 @@ The postulation of *adaptive* and *maladaptive* ER strategies was put in a new p
 Similar to other psychological domains, e.g., attention and goal pursuit, *maladaptive* now refers to inflexible ER strategy use or use of strategies that are hindering goal achievement [@Aldao2015].
 Adaptive flexible ER requires a large repertoire of ER strategies [@Aldao2015].
 For example, greater ER flexibility is related to reduced negative affect and therefore beneficial in daily life [@Blanke2020].
-<!-- was ist hier mit ER variablitiy gemeint? würde Begriffe einheitlich verwenden, denke, hier ist ER flexibility gemeint. --> 
 Strategies have to be chosen from the repertoire that are useful for goal achieving.
 Evidence from other contexts (e.g., intertemporal choice, [@Kable2007]) shows that subjective values (SVs) are attributed to the choice options on the basis of which the decision is made.
 Research on ER choice has identified numerous factors that influence the choice of ER strategies, which can be seen as indirect evidence for factors influencing SVs. 
