--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -33,8 +33,7 @@ Moreover, it is known that ER strategies reduce physiological responses of emoti
 So these tactics from three different strategies proved to be effective in the short term. 
 However, in order to be able to make a statement on their general benefit, longer-term consequences must also be considered. 
 In particular, strategies that do not put the emotional content of the situation into a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
-<!-- Wortwiederholung --> 
-Long-term consequences of self-reported habitual use of ER strategies for affect and well-being have been discussed [@GrossJohn2003]. 
+Longer lasting consequences of self-reported habitual use of ER strategies for affect and well-being have been discussed [@GrossJohn2003]. 
 Especially suppression is generally associated with poorer outcomes (i.e., more negative affect, lower general well-being), which led to the postulation of *adaptive* and *maladaptive* ER strategies.
 For example, it was shown that maladaptive ER strategies mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
 In addition, a number of ER strategies have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]). 
