--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -169,7 +169,7 @@ The authors declare no competing interests.
 # Figures and figure captions
 
 \newpage
-```{r fig1appendix, echo = FALSE, message = FALSE, warning = FALSE, out.width="98%"}
+```{r fig1appendix, echo = FALSE, message = FALSE, warning = FALSE}
 include_graphics(here("99_Thinktank","Other","Paradigm_Scheme_T2.png" ))
 ```
 *Figure 1.* Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can also be represented by our paradigm.
@@ -180,7 +180,7 @@ include_graphics(here("99_Thinktank","Other","Paradigm_Scheme_T2.png" ))
 
 \newpage
 
-# Supplement
+# Supplementary Material {#SupplementaryMaterial}
 
 \includepdf[pages={-}, landscape=true]{Supplement/StimList_Suppl.pdf}
 
