--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -270,6 +270,14 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    year = {1986}
 }
 
+@article{Gaertner2021,
+   author = {Gärtner, A. and Jawinski, P. and Strobel, A.},
+   title = {Individual differences in inhibitory control are not related to emotion regulation},
+   journal = {PsyArXiv},
+   DOI = {10.31234/osf.io/cd8rx},
+   year = {2021}
+}
+
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
