--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -69,63 +69,63 @@ Study data will be collected and managed using REDCap electronic data capture to
 
 ### 2.3.1 Psychometric measures
 
-The online survey contains a number of questionnaires: General psychological well-being is assessed using the German version of the WHO-5 scale [@Bech2004; @Braehler2007].
-<!-- Hier und im Folgenden wird wieder Präsens verwendet - vereinheitlichen? -->
-To measure resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)[@Connor2003,@Campbell-Sills2007; @Sarubin2015] is used.
-Habitual use of ER is assessed using the German version of the Emotion Regulation Questionnaire (ERQ) [@GrossJohn2003; @Abler2009].
-For the assessment of ER flexibility we use the Flexible Emotion Regulation Scale (FlexER) [@Doerfel2019].
-Implicit theories of willpower in emotion control are assessed using the implicit theories questionnaire from @Bernecker2017.
-To assess Need for Cognition, the German version short form of the Need for Cognition Scale [@Cacioppo1982; @Bless1994] is used.
-To assess self-control, sum scores of the German versions of the following questionnaires are used [@Paschke2016]: the Self-Regulation Scale (SRS) [@Schwarzer1999], the Brief Self-Control Scale (BSCS) [@Tangney2004; @Sproesser2011], and the Barratt Impulsiveness Scale (BIS-11) [@Patton1995; @Hartmann2011].
-Attentional control is assessed using the Attentional Control Scale (ACS) [@Derryberry2002].
-For more detailed information on psychometric properties of the questionnaires, please see [supplementary material](#SupplementQuestionnaires). <!-- Not sure whether you can state this so briefly without giving more detailed information on, e.g., sample items, the scale on which answers are recorded (e.g., -3 ... +3), the reliability of the measures. 
-AG: im Paper würde man das hier angeben, bei RR reicht vielleicht Supplememt? -->
+The online survey will contain a number of questionnaires: General psychological well-being will be assessed using the German version of the WHO-5 scale [@Bech2004; @Braehler2007].
+To measure resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)[@Connor2003,@Campbell-Sills2007; @Sarubin2015] will be used.
+Habitual use of ER will be assessed using the German version of the Emotion Regulation Questionnaire (ERQ) [@GrossJohn2003; @Abler2009].
+For the assessment of ER flexibility we will use the Flexible Emotion Regulation Scale (FlexER) [@Doerfel2019].
+Implicit theories of willpower in emotion control will be assessed using the implicit theories questionnaire from @Bernecker2017.
+To assess Need for Cognition, the German version short form of the Need for Cognition Scale [@Cacioppo1982; @Bless1994] will be used.
+To assess self-control, sum scores of the German versions of the following questionnaires will be used [@Paschke2016]: the Self-Regulation Scale (SRS) [@Schwarzer1999], the Brief Self-Control Scale (BSCS) [@Tangney2004; @Sproesser2011], and the Barratt Impulsiveness Scale (BIS-11) [@Patton1995; @Hartmann2011].
+Attentional control will be assessed using the Attentional Control Scale (ACS) [@Derryberry2002].
+For more detailed information on psychometric properties of the questionnaires, please see [supplementary material](#SupplementQuestionnaires). 
 
 ### 2.3.2 Emotion regulation paradigm
 
-The ER paradigm consists of three parts that will be described in the following.
+The ER paradigm will consist of three parts that will be described in the following.
 
-*Part one: ER task.* <br> Part one is a standard ER task in a block design (see Figure X), similar to paradigms previously used by our group [@Scheffel2021].
-Participants are told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
-Every participant first has the condition "active viewing-neutral" that serves as a baseline condition.
-During this block, 20 neutral pictures are presented.
-Participants are asked to "actively view all pictures and permit all emotions that may arise." In the second block, participants actively viewe negative pictures.
-During the third, fourth, and fifth block, participants see negative pictures and are asked to regulate their emotions using distraction, distancing, and suppression.
-In order to achieve distraction, participants are asked to think of a geometric object or an everyday activity, like brushing their teeth.
-During distancing, participants are asked to "take the position of a non-involved observer, thinking about the picture in a neutral way." Participants are told not to re-interpret the situation or attaching a different meaning to the situation.
-During suppression, participants are told to "suppress their emotional facial expression." They should imagine being observed by a third person that should not be able to tell by looking at the facial expression whether the person is looking at an emotional picture.
-Participants are instructed not to suppress their thoughts or change their facial expression to the opposite [@Scheffel2021].
-All participants receive written instruction and complete a training session.
-After the training session, participants are asked about their applied ER strategies to avoid misapplication.
-The order of the three regulation blocks (distraction, distancing, and suppression) is randomized between participants.
+*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure X), similar to paradigms previously used by our group [@Scheffel2021].
+Participants will be told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
+Every participant first will have the condition "active viewing-neutral" that serves as a baseline condition.
+During this block, 20 neutral pictures will be presented.
+Participants will be asked to "actively view all pictures and permit all emotions that may arise." 
+In the second block, participants will actively view negative pictures.
+During the third, fourth, and fifth block, participants will see negative pictures and will be asked to regulate their emotions using distraction, distancing, and suppression.
+In order to achieve distraction, participants will be asked to think of a geometric object or an everyday activity, like brushing their teeth.
+During distancing, participants will be asked to "take the position of a non-involved observer, thinking about the picture in a neutral way." 
+Participants will be told not to re-interpret the situation or attaching a different meaning to the situation.
+During suppression, participants will be told to "suppress their emotional facial expression." 
+They should imagine being observed by a third person that should not be able to tell by looking at the facial expression whether the person is looking at an emotional picture.
+Participants will be instructed not to suppress their thoughts or change their facial expression to the opposite [@Scheffel2021].
+All participants will receive written instruction and complete a training session.
+After the training session, participants will be asked about their applied ER strategies to avoid misapplication.
+The order of the three regulation blocks (distraction, distancing, and suppression) will be randomized between participants.
 
-*Part two: ER effort discounting.* <br> In the second part, ER effort discounting takes place.
-The procedure of the discounting follows the COG-ED paradigm by Westbrook et al. [-@Westbrook2013] with a major change.
-We use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values are presented.
-The order of the comparisons is randomized.
-Because there is no strategy that is objectively more difficult, we added an initial comparison that begins with the option "1 EUR for strategy A or 1 EUR for strategy B".
-The strategy that is not chosen is assigned the value of 2 EUR.
-From this point on, comparisons between strategies follow the original COG-ED paradigm [@Westbrook2013].
-Participants are instructed to decide as realistically as possible by imagining that the money displayed is actually available for choice.
+*Part two: ER effort discounting.* <br> In the second part, ER effort discounting will take place.
+The procedure of the discounting will follow the COG-ED paradigm by Westbrook et al. [-@Westbrook2013] with a major change.
+We will use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values will be presented.
+The order of the comparisons will be randomized.
+Because there is no strategy that is objectively more difficult, we will add an initial comparison that begins with the option "1 EUR for strategy A or 1 EUR for strategy B".
+The strategy that is not chosen will be assigned the value of 2 EUR.
+From this point on, comparisons between strategies will follow the original COG-ED paradigm [@Westbrook2013].
+Participants will be instructed to decide as realistically as possible by imagining that the money displayed is actually available for choice.
 
-*Part three: ER choice.* <br> After the discounting part, participants choose which of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
-Importantly, there is no further instruction on what basis they should make their decision.
+*Part three: ER choice.* <br> After the discounting part, participants will choose which of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
+Importantly, there will be no further instruction on what basis they should make their decision.
 Participants should make their decision freely, according to criteria they consider important for themselves.
-However, participants are asked to state the reasons for the decision afterwards.
-As soon as they have decided, they see the respective instruction and the block with another 20 negative pictures starts.
+However, participants will be asked to state the reasons for the decision afterwards.
+As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
 
 ### 2.3.3 Stimuli
 
-Pictures used in the paradigm were selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS) [@Lang2008].
+Pictures that will be used in the paradigm are selected from the Emotional Picture Set (EmoPicS) [@Wessa2010] and the International Affective Picture System (IAPS) [@Lang2008].
 The 20 neutral pictures (Valence (V): *M* $\pm$ *SD* = `r round(mean(stim_neutral$valence), digits = 2)` $\pm$ `r round(sd(stim_neutral$valence), digits = 2)`; Arousal (A): *M* $\pm$ *SD* = `r round(mean(stim_neutral$arousal), digits = 2)` $\pm$ `r round(sd(stim_neutral$arousal), digits = 2)`) depicted content related to the categories persons, objects, and scenes.
-Further, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, were used.
-An evolutionary algorithm [@Yu2010] was used to cluster these pictures into five sets with comparable valence and arousal values (set one: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 1]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 1]), digits = 2)`; set two: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 2]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 2]), digits = 2)`; set three: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 3]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 3]), digits = 2)`; set four: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 4]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 4]), digits = 2)`; set five: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 5]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 5]), digits = 2)`).
+Further, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, will be used.
+An evolutionary algorithm [@Yu2010] is used to cluster these pictures into five sets with comparable valence and arousal values (set one: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 1]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 1]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 1]), digits = 2)`; set two: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 2]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 2]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 2]), digits = 2)`; set three: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 3]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 3]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 3]), digits = 2)`; set four: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 4]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 4]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 4]), digits = 2)`; set five: V: *M* $\pm$ *SD* = `r round(mean(stim_negative$valence[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$valence[stim_negative$set == 5]), digits = 2)`, A: *M* $\pm$ *SD* = `r round(mean(stim_negative$arousal[stim_negative$set == 5]), digits = 2)` $\pm$ `r round(sd(stim_negative$arousal[stim_negative$set == 5]), digits = 2)`).
 A complete list of all pictures and their classification into sets can be found in supplementary material 1.
 
 ### 2.3.4 Facial electromyography
 
-Bipolar facial electromyography (EMG) will be measured for *corrugator supercilii* and *levator labii* as indices of affective valence [@Bradley2000], similar to previous work by our group [@Gärtner, Jawinski, Strobel, 2021].
-<!-- da wir das ja sogar schon gemacht haben, fände ich es cool die Studie zu erwähnen. :-) Zeigt ja auch, dass wir keine Neulinge auf dem Gebiet sind. Referenz muss glaub noch in Bib eingefügt werden! --> 
+Bipolar facial electromyography (EMG) will be measured for *corrugator supercilii* and *levator labii* as indices of affective valence [@Bradley2000], similar to previous work by our group [@Gaertner2021].
 Two passive surface Ag/AgCl electrodes (8 mm inner diameter, 10 mm distance between electrodes) will be placed over each left muscle according to the guidelines of @Fridlund1986.
 The ground electrode will be placed over the left *Mastoid*.
 Before electrode placement, the skin will be abraded with Every abrasive paste, cleaned with alcohol, and filled with Lectron III electrolyte gel.
@@ -144,17 +144,14 @@ In a meta-analysis of Zaehringer and colleagues [-@Zaehringer2020], effect sizes
 To find an effect of $d=-0.32$ of ER on *corrugator* muscle activity with $\alpha=.05$ and $\beta=.95$, data of at least $N=85$ have to be analyzed.
 Power analyses of all other hypotheses yielded smaller sample sizes.
 However, if participants withdraw from study participation, technical failures occur, or experimenter considers the participant for not suitable for study participation (e.g., because the participant does not follow instructions or shows great fatigue), respective data will also be excluded from further analyses.
-Therefore, we aim to collect data of 90 participants.
-Detailed information on power calculation for each hypothesis can be found in the [design table](#DesignTable) in the Supplement.
-<!-- hier würde ich den Verweis zur Design Table ganz explizit machen, also sagen, wo diese zu finden ist. -->
+Therefore, we aim to collect data of XX participants.
+Detailed information on power calculation for each hypothesis can be found in the [design table](#DesignTable).
 
 ## 2.5 Analysis plan
-<!-- hier wird wieder durchgehend Futur verwendet - würde das in Methods vereinheitlichen. -->
 
 Data collection and analysis will not be performed blind to the conditions of the experiments.
 The level of significance will be set to $\alpha=.05$.
 
-<!-- Bei den krusiven Zwischenüberschriften wie in der nächsten Zeile würde ich Punkte setzen, sieht sonst im PDF sehr eng zusammen aus. ;-)  -->
 *Effects of emotion regulation on arousal, facial EMG and effort.* <br> To examine the impact of valence of emotional pictures on subjective arousal ratings, a repeated measures analysis of variance (rmANOVA) with the factor valence (neutral and negative) for the strategy active viewing will be conducted.
 To investigate the effects of the three ER strategies on subjective arousal, another rmANOVA  with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for subjective arousal ratings will be conducted.
 
@@ -182,7 +179,8 @@ Restricted maximum likelihood (REML) will be applied to fit the model.
 A random slopes model of SVs including subjective effort (effort ratings), subjective arousal (arousal ratings), and physiological responses (*corrugator* and *levator* activity) as level-1-predictors will be specified.
 $$
 SV \sim strategy\ + \text{effort rating} + \text{arousal rating} + corrugator \text{ activity} + levator \text{ activity} + (strategy|subject)
-$$ Level-1-predictors will be centered within cluster [@Enders2007].
+$$ 
+Level-1-predictors will be centered within cluster [@Enders2007].
 Residuals of the final model will be inspected visually.
 Intraclass correlation coefficient (ICC), $\rho$, will be reported for each model (null model, as well as full model).
 
@@ -193,7 +191,8 @@ The association between flexible ER and SVs of ER strategies will be investigate
 Firstly, SVs will be ordered by magnitude.
 Secondly, for each participant a linear model will be built to estimate the individual $intercept$ and $slope$.
 
-For each result of the analyses, both $p$-values and Bayes factors $BF10$, calculated using the *BayesFactor* package [@Morey2021], will be reported. Bayes factors are calculated using the default prior widths of the functions *anovaBF*, *lmBF* and *regressionBF*.
+For each result of the analyses, both $p$-values and Bayes factors $BF10$, calculated using the *BayesFactor* package [@Morey2021], will be reported. 
+Bayes factors are calculated using the default prior widths of the functions *anovaBF*, *lmBF* and *regressionBF*.
 
 ## Data availability
 
