--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -41,7 +41,7 @@ A complete list of all measures assessed in the study can be found at OSF (<http
 
 The study protocol complies with all relevant ethical regulations and was approved by the ethics committee of the Technische Universität Dresden (reference number EK...). <!-- Attention!add EK number, when approved --> 
 Prior to testing, written informed consent will be obtained.
-Participants will receive 30€ in total or course credit for participation.
+Participants will receive 30 € in total or course credit for participation.
 
 ## 2.2 Pilot data
 
@@ -75,7 +75,7 @@ Habitual use of ER will be assessed using the German version of the Emotion Regu
 For the assessment of ER flexibility we will use the Flexible Emotion Regulation Scale (FlexER) [@Doerfel2019].
 Implicit theories of willpower in emotion control will be assessed using the implicit theories questionnaire from @Bernecker2017.
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale [@Cacioppo1982; @Bless1994] will be used.
-To assess self-control, sum scores of the German versions of the following questionnaires will be used [@Paschke2016]: the Self-Regulation Scale (SRS) [@Schwarzer1999], the Brief Self-Control Scale (BSCS) [@Tangney2004; @Sproesser2011], and the Barratt Impulsiveness Scale (BIS-11) [@Patton1995; @Hartmann2011].
+To assess self-control [@Paschke2016], sum scores of the German versions of the following questionnaires will be used: the Self-Regulation Scale (SRS) [@Schwarzer1999], the Brief Self-Control Scale (BSCS) [@Tangney2004; @Sproesser2011], and the Barratt Impulsiveness Scale (BIS-11) [@Patton1995; @Hartmann2011].
 Attentional control will be assessed using the Attentional Control Scale (ACS) [@Derryberry2002].
 For more detailed information on psychometric properties of the questionnaires, please see [supplementary material](#SupplementQuestionnaires). 
 
@@ -83,7 +83,7 @@ For more detailed information on psychometric properties of the questionnaires, 
 
 The ER paradigm will consist of three parts that will be described in the following.
 
-*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure X), similar to paradigms previously used by our group [@Scheffel2021].
+*Part one: ER task.* <br> Part one will be a standard ER task in a block design (see Figure \@ref(fig:Design_ER-ED)), similar to paradigms previously used by our group [@Scheffel2021].
 Participants will be told to actively view neutral and negative pictures (see [2.3.3](##stimuli)) or to regulate all upcoming emotions by means of distraction, distancing, and expressive suppression, respectively.
 Every participant first will have the condition "active viewing-neutral" that serves as a baseline condition.
 During this block, 20 neutral pictures will be presented.
@@ -104,8 +104,8 @@ The order of the three regulation blocks (distraction, distancing, and suppressi
 The procedure of the discounting will follow the COG-ED paradigm by Westbrook et al. [-@Westbrook2013] with a major change.
 We will use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs. distancing, distraction vs. suppression, and distancing vs. suppression), two strategies with monetary values will be presented.
 The order of the comparisons will be randomized.
-Because there is no strategy that is objectively more difficult, we will add an initial comparison that begins with the option "1 EUR for strategy A or 1 EUR for strategy B".
-The strategy that is not chosen will be assigned the value of 2 EUR.
+Because there is no strategy that is objectively more difficult, we will add an initial comparison that begins with the option "1 € for strategy A or 1 € for strategy B".
+The strategy that is not chosen will be assigned the value of 2 €.
 From this point on, comparisons between strategies will follow the original COG-ED paradigm [@Westbrook2013].
 Participants will be instructed to decide as realistically as possible by imagining that the money displayed is actually available for choice.
 
@@ -114,6 +114,10 @@ Importantly, there will be no further instruction on what basis they should make
 Participants should make their decision freely, according to criteria they consider important for themselves.
 However, participants will be asked to state the reasons for the decision afterwards.
 As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
+
+```{r Design_ER-ED, echo = FALSE, message = FALSE, warning = FALSE, fig.cap="Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale."}
+include_graphics(here("0g_Paper", "ER-ED", "figures", "Design_ER-ED.png"))
+```
 
 ### 2.3.3 Stimuli
 
